--- a/TaskScheduler/TaskScheduler.csproj
+++ b/TaskScheduler/TaskScheduler.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\201510140933199_Adding project description to model.Designer.cs">
       <DependentUpon>201510140933199_Adding project description to model.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510142131034_Adding project description.cs" />
+    <Compile Include="Migrations\201510142131034_Adding project description.Designer.cs">
+      <DependentUpon>201510142131034_Adding project description.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -198,6 +202,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jquery-ui.min.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -250,6 +255,7 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.11.4.js" />
     <Content Include="Scripts\jquery-ui-1.11.4.min.js" />
+    <Content Include="Scripts\jquery.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -319,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510140933199_Adding project description to model.resx">
       <DependentUpon>201510140933199_Adding project description to model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510142131034_Adding project description.resx">
+      <DependentUpon>201510142131034_Adding project description.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
